# libmpsse

./: .gitignore  CMakeLists.txt
cmake/: FindFtdi1.cmake
src/: CMakeLists.txt  config.h.in  mpsse.h
